Adding bottom part of the content

--- a/index.html
+++ b/index.html
@@ -216,6 +216,47 @@ title: Telary - Data made Agile
             <li>CTO for data related topics</li>
         </ul>
     </div>
+
+    <div style="max-width: 900px; margin: 2rem auto; padding: 1rem;">
+        <!-- Contact box -->
+        <div style="background: #e8fbe6; border-radius: 10px; padding: 1rem; margin-bottom: 2rem; text-align: center;">
+            <strong>📞 Contact us here</strong><br>
+            👉 <a href="https://linkedin.com/in/constant-deschietere/"
+                target="_blank">linkedin.com/in/constant-deschietere/</a><br>
+            👉 <a href="https://calendly.com/constantdeschietere/discovery-call" target="_blank">Or book a 30 minutes
+                free discovery call</a>
+        </div>
+
+        <!-- About / References / Budget -->
+        <div style="display: flex; flex-wrap: wrap; gap: 2rem;">
+            <!-- Left column -->
+            <div style="flex: 1; min-width: 250px;">
+                <h2>About us</h2>
+                <p>We’re working with experienced data engineers, data architect and data analysts that will all work
+                    together to reach our goal.</p>
+
+                <h2>References</h2>
+                <ul>
+                    <li><a href="https://www.edf.fr/" target="_blank">https://www.edf.fr/</a></li>
+                    <li><a href="https://mangopay.com/" target="_blank">https://mangopay.com/</a></li>
+                    <li><a href="https://teletravail.guru/" target="_blank">https://teletravail.guru/</a></li>
+                    <li><a href="https://www.maatpharma.com/fr/" target="_blank">https://www.maatpharma.com/fr/</a></li>
+                </ul>
+                <button
+                    style="margin-top: 1rem; background: black; color: white; padding: 0.6rem 1.2rem; border: none; border-radius: 5px;">➔
+                    Detailed references</button>
+            </div>
+
+            <!-- Right column -->
+            <div style="flex: 1; min-width: 250px;">
+                <h2>Budget info</h2>
+                <p style="color: gray;">Usual costs breakdown are the following</p>
+                <p><strong>1️⃣ Co-Create & Design</strong><br>› Between 5k to 10k€</p>
+                <p><strong>2️⃣ Setup & Deploy</strong><br>› Starts at 10k€</p>
+                <p><strong>3️⃣ Make it your own</strong><br>› Starts at 1k€ per month</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
