First draft of the blogging part

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ title: Telary - Data made Agile
             <!-- Left column -->
             <div style="flex: 1; min-width: 250px;">
                 <h2>About us</h2>
-                <p>We’re working with experienced data engineers, data architect and data analysts that will all work
+                <p>We're working with experienced data engineers, data architect and data analysts that will all work
                     together to reach our goal.</p>
 
                 <h2>References</h2>
@@ -242,9 +242,9 @@ title: Telary - Data made Agile
                     <li><a href="https://teletravail.guru/" target="_blank">https://teletravail.guru/</a></li>
                     <li><a href="https://www.maatpharma.com/fr/" target="_blank">https://www.maatpharma.com/fr/</a></li>
                 </ul>
-                <button
-                    style="margin-top: 1rem; background: black; color: white; padding: 0.6rem 1.2rem; border: none; border-radius: 5px;">➔
-                    Detailed references</button>
+                <a href="/references.html"
+                    style="margin-top: 1rem; background: black; color: white; padding: 0.6rem 1.2rem; border: none; border-radius: 5px; text-decoration: none; display: inline-block;">➔
+                    Detailed references</a>
             </div>
 
             <!-- Right column -->
