--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,13 @@
 layout: default
 title: Blog
 ---
-
-<h1>Blog</h1>
-<ul>
-    {% for post in site.posts %}
-    <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        <p>{{ post.excerpt }}</p>
-    </li>
-    {% endfor %}
-</ul>
+<div class="content-container">
+    <h1>Blog</h1>
+    <ul>
+        {% for post in site.posts %}
+        <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
