--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ title: Blog
     <ul>
         {% for post in site.posts %}
         <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
+            <a href="{{ post.url }}">{{ post.title }}</a> on {{ post.date | date: "%B %d, %Y" }}
         </li>
         {% endfor %}
     </ul>
