Fixing images for ghost migration

--- a/technologies.html
+++ b/technologies.html
@@ -1,19 +1,27 @@
 ---
 layout: default
-title: Technologies We Use
+title: Technologies we've Worked With
 ---
 <div class="content-container">
+    <h1>Technologies we've Worked With</h1>
 
-    <h1>Technologies We Use</h1>
-    <ul>
-        <li>Python</li>
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Node.js</li>
-        <li>Docker</li>
-        <li>Kubernetes</li>
-        <li>TensorFlow</li>
-        <li>PostgreSQL</li>
-        <!-- Add more technologies as needed -->
-    </ul>
+    <div class="tech-section">
+        <h2>Cloud Providers</h2>
+        <ul>
+            <li>AWS (Amazon Web Services)</li>
+            <li>Google Cloud Platform</li>
+            <li>OVHcloud</li>
+            <li>Microsoft Azure</li>
+        </ul>
+    </div>
+
+    <div class="tech-section">
+        <h2>Data Warehousing</h2>
+        <ul>
+            <li>Snowflake</li>
+            <li>Databricks</li>
+            <li>Google BigQuery</li>
+            <li>Amazon Redshift</li>
+        </ul>
+    </div>
 </div>
