Fixing image url

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Telary - Data made Agile
                 <p>A data platform is a set of software components used to gather, store, organise and use data. You
                     can
                     choose a one-stop shop or combine different tools to fit your needs.</p>
-                <img src="data-platform-diagram.png" alt="Components of a modern data platform"
+                <img src="/assets/img/data-platform-diagram.png" alt="Components of a modern data platform"
                     style="width: 100%; max-width: 700px;">
             </div>
 
