Adding projects examples

--- a/projects.html
+++ b/projects.html
@@ -38,4 +38,45 @@ title: Projects
         </ul>
     </div>
     -->
+    <div class="card">
+        <h2>Data Platform Cloud Migration</h2>
+        <p>Helped a financial services company modernize their data infrastructure, resulting in:</p>
+        <ul>
+            <li>Full migration of the data platform to AWS</li>
+            <li>50% reduction in data processing time</li>
+            <li>Improved data quality and consistency</li>
+            <li>Enhanced reporting capabilities</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Regulatory Compliance</h2>
+        <p>Technical advising for health data platform to comply with "EDS".</p>
+        <ul>
+            <li>Architecture design</li>
+            <li>Improved data security and access control</li>
+            <li>Documentation</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Data Platform Setup</h2>
+        <p>Design and deploy GCP data platform</p>
+        <ul>
+            <li>Architecture design</li>
+            <li>Infrastructure as code</li>
+            <li>Data pipeline setup</li>
+            <li>Finops</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Data migration</h2>
+        <p>Migrate data from different databases</p>
+        <ul>
+            <li>MSSQL to Snowflake</li>
+            <li>BigQuery to Elasticsearch</li>
+            <li>AppSearch to Elasticsearch</li>
+        </ul>
+    </div>
 </div>
