--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,31 @@
 layout: default
 title: Blog
 ---
-<div class="content-container">
-    <h1>Blog</h1>
-    <ul>
-        {% for post in site.posts %}
-        <li>
-            <a href="{{ post.url }}">{{ post.title }}</a> on {{ post.date | date: "%B %d, %Y" }}
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<header class="bg-purple-700 text-white py-6 text-center">
+    <h1 class="text-4xl font-bold">Our Blog</h1>
+    <p class="text-lg mt-2">Stay updated with our latest posts</p>
+</header>
+
+<body class="bg-gray-50 text-gray-900 font-sans">
+    <section class="py-12 px-6">
+        <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                {% for post in site.posts %}
+                <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                    <a href="{{ post.url }}">
+                        <img src="{{ post.image | default: '/assets/img/default-thumbnail.jpg' }}" alt="{{ post.title }}" class="w-full h-48 object-cover">
+                    </a>
+                    <div class="p-4">
+                        <h2 class="text-xl font-semibold text-purple-700">
+                            <a href="{{ post.url }}">{{ post.title }}</a>
+                        </h2>
+                        <p class="text-sm text-gray-600 mt-2">{{ post.date | date: "%B %d, %Y" }}</p>
+                        <p class="text-gray-700 mt-4">{{ post.excerpt | strip_html | truncatewords: 20 }}</p>
+                        <a href="{{ post.url }}" class="text-purple-700 font-bold mt-4 inline-block">Read More →</a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+</body>
