--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@ title: Blog
         <div class="max-w-6xl mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 {% for post in site.posts %}
+                {% if post.layout == "post" %}
                 <div class="bg-white shadow-md rounded-lg overflow-hidden">
                     <a href="{{ post.url }}">
                         <img src="{{ post.image | default: '/assets/img/default-thumbnail.jpg' }}" alt="{{ post.title }}" class="w-full h-48 object-cover">
@@ -25,6 +26,7 @@ title: Blog
                         <a href="{{ post.url }}" class="text-purple-700 font-bold mt-4 inline-block">Read More →</a>
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
